# apps

./: .dockerignore  .env.development  .env.production  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  CLAUDE.md  README.md  RELEASE_NOTES.md  RELEASE_STEPS.md  THIRD_PARTY_NOTICES.md  eslint.config.ts  index.html  nodejs.Dockerfile  nodejs.workspace.Dockerfile  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml
.husky/: pre-commit
bot/: package.json  tsup.config.ts
cli/: README.md  package.json  tsup.config.ts
core/: README.md  network.config.json  package.json
data-generators/: all.ts  bitcoin.ts  fetchBitcoinFees.ts  fetchBitcoinPrices.ts  (+3 more)
src-tauri/: Cargo.toml  build.rs  dev.ts  tauri.capital.conf.json  tauri.capital.experimental.conf.json  tauri.capital.local.docknet.conf.json  tauri.capital.local.mainnet.conf.json  tauri.capital.local.testnet.conf.json  tauri.conf.json  tauri.desktop.conf.json  tauri.desktop.experimental.conf.json  tauri.desktop.local.docknet.conf.json  tauri.desktop.local.mainnet.conf.json  tauri.desktop.local.testnet.conf.json  tauri.experimental.conf.json  tauri.investment.conf.json  tauri.investment.local.docknet.conf.json  tauri.investment.local.mainnet.conf.json  tauri.investment.local.testnet.conf.json  tauri.investments.conf.json  tauri.investments.experimental.conf.json  tauri.investments.local.docknet.conf.json  tauri.investments.local.mainnet.conf.json  tauri.investments.local.testnet.conf.json  tauri.local.docknet.conf.json  tauri.local.mainnet.conf.json  tauri.local.testnet.conf.json  tauri.operations.conf.json  tauri.operations.experimental.conf.json  tauri.operations.local.docknet.conf.json  tauri.operations.local.mainnet.conf.json  tauri.operations.local.testnet.conf.json  tauri.treasury.conf.json  tauri.treasury.experimental.conf.json  tauri.treasury.local.docknet.conf.json  tauri.treasury.local.mainnet.conf.json  tauri.treasury.local.testnet.conf.json
src-tauri/argonot-icons/experimental/docknet/: icon.icns
src-tauri/argonot-icons/experimental/mainnet/: icon.icns
src-tauri/argonot-icons/local/testnet/: icon.icns
src-tauri/argonot-icons/stable/mainnet/: icon.icns
src-tauri/capabilities/: default.json  dev.json
src-tauri/icons-capital/experimental/mainnet/: icon.icns
src-tauri/icons-capital/stable/docknet/: icon.icns
src-tauri/icons-capital/stable/testnet/: icon.icns
src-tauri/icons-desktop/local/docknet/: icon.icns
src-tauri/icons-desktop/local/mainnet/: icon.icns
src-tauri/icons-desktop/local/testnet/: icon.icns
src-tauri/icons-desktop/stable/docknet/: icon.icns
src-tauri/icons-desktop/stable/mainnet/: icon.icns
src-tauri/icons-investments-raw/: icons.pxd
src-tauri/icons-operations-raw/: icons.pxd
src-tauri/icons-operations/experimental/testnet/: icon.icns
src-tauri/icons-operations/stable/testnet/: icon.icns
src-tauri/icons-treasury/experimental/docknet/: icon.icns
src-tauri/icons/experimental/testnet/: icon.icns
src-tauri/icons/local/mainnet/: icon.icns
src-tauri/migrations/01-bootup/: up.sql
src-tauri/migrations/02-wallet-tx/: up.sql
src-tauri/migrations/03-lockstatus/: up.sql
src-tauri/migrations/03-reward-ticks/: up.sql
src-tauri/migrations/04-bids/: up.sql
src-tauri/migrations/04-revenue/: up.sql
src-tauri/migrations/05-bitcoin/: up.sql
src-tauri/migrations/05-syncstate/: up.sql
src-tauri/migrations/06-commitment/: up.sql
src-tauri/migrations/07-commitment/: up.sql
src-tauri/migrations/08-bitcoin-blob/: up.sql
src-tauri/migrations/09-bitcoin-market/: up.sql
src-tauri/migrations/10-bitcoin-unique-uuid/: up.sql
src-tauri/migrations/11-server-install/: up.sql
src-tauri/migrations/12-bitcoin-utxo-foundation/: up.sql
src-tauri/migrations/13-transaction-status-history/: up.sql
src-tauri/migrations/14-remove-config-instruction-flags/: up.sql
src-tauri/migrations/15-stable-swaps/: up.sql
src-tauri/migrations/15-vault-coupons/: up.sql
src-tauri/migrations/16-bitcoin-relay-metadata/: up.sql
src-tauri/migrations/16-drop-vault-coupons/: up.sql
src-tauri/migrations/17-crosschain-inbound-transfers/: up.sql
src-tauri/migrations/18-bitcoin-lock-failed/: up.sql
src-tauri/migrations/19-drop-stable-swap-market-state/: up.sql
src-tauri/migrations/20-wallet-hd-keys/: up.sql
src-tauri/migrations/21-crosschain-outbound-transfers/: up.sql
src-tauri/migrations/22-bitcoin-lock-failed-acknowledged/: up.sql
src-tauri/migrations/23-crosschain-transfer-progress/: up.sql
src-tauri/migrations/24-crosschain-transfer-failures/: up.sql
src-tauri/migrations/25-wallets/: up.sql
src-tauri/migrations/26-financial-positions/: up.sql
src-tauri/migrations/27-bitcoin-history-recovery/: up.sql
src-tauri/migrations/27-external-wallet-balance-cache/: up.sql
src-tauri/migrations/28-bitcoin-reused-hd-path/: up.sql
src-tauri/src/: e2e_screenshots.rs  ethereum_signer.rs  lib.rs  main.rs  migrations.rs  security.rs  ssh.rs  ssh_access.rs  ssh_pool.rs  troubleshooting.rs  utils.rs  vm.rs
(+1508 files in other folders)
