[package]
name = "Argon"
version = "0.1.0"
description = "Desktop investor console for Argon"
authors = ["Caleb Clark", "Blake Byrnes"]
edition = "2024"
build = "build.rs"

[workspace.package]
version = "1.1.0"
edition = "2024"

[workspace]
members = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cargo-clippy = []
e2e-screenshots = ["dep:xcap"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "argon_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"


[dependencies]
tauri = { version = "2", features = ["default", "macos-private-api", "image-png", "devtools"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-macos-permissions = "2.3.0"
nosleep = "0.2.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri-plugin-os = "2.3.1"
russh = "0.54.6"
secrecy = "0.8.0"
tokio = "1.48.0"
window-vibrancy = "0.6.0"
rand = "0.9.2"
color-backtrace = "0.7.1"
include_dir = "0.7"
lazy_static = "1.5.0"
anyhow = "1.0"
tauri-plugin-log = { version = "2", features = ["colored" ] }
keyring = {version = "3", features = ["apple-native", "windows-native", "linux-native"] }
hex = "0.4.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
sp-core = { version="38.1.0", features = ["default"] }
zip = { version="6",features= ["time"] }
time = { version = "0.3", default-features = false }
walkdir = "2.5.0"
dotenvy = "0.15"
fs2 = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
bip39 = { version = "2" }
bip32 = { version = "0.5.3"}
curve25519-dalek = "4.1.3"
hkdf = "0.12.4"
reqwest = { version = "0.12"  }
sha2 = "0.10.9"
tauri-plugin-deep-link = "2"
xcap = { version = "0.8.2", optional = true, default-features = false, features = ["image"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
